--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ script:
 
 cache:
   directories:
-    - $GOPATH/src/gx
+    - $GOPATH/src/mod
 
 notifications:
   email: false
 
-env: GOTFLAGS="-race"
+env: GOTFLAGS="-race" GO111MODULE=on
